2003-10-24  Pavel Roskin  <proski@gnu.org>

	* chmod.c (stat_file): Eliminate.  Use mc_stat().
	* chmod.h: Remove unneded code.
	* chown.h: Likewise.
	* main.c: Include achown.h.

	* fileopctx.h: Define struct FileOpContext.
	* background.h: Avoid conditional declarations.

	* dir.h: Eliminate DIR_H_INCLUDE_HANDLE_DIRENT.  Adjust all
	callers.  Remove unused code.
	* dlg.h: Remove unused code.
	* panel.h: Likewise.

2003-10-24  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* dir.c (if_link_is_exe): Check mc_stat() return value.
	Make full_name and file_entry const.
	(link_isdir): Make file_entry const.
	* dir.h: Adjust declarations.

2003-10-24  Pavel Roskin  <proski@gnu.org>

	* view.c (view_handle_editkey): Fix prototype.
	(toggle_hex_mode): Don't mess with parent's flags - it can
	permanently disable Tab switch between panels.
	(view): Use DLG_WANT_TAB for full screen only, unconditionally.

2003-10-23  Pavel Roskin  <proski@gnu.org>

	* tree.h: Don't include treestore.h.  Fix sources to include
	treestore.h when needed.
	* treestore.h: Eliminate useless typedefs.

	* treestore.c (tree_store_start_check_cwd): Eliminate.
	(tree_store_start_check): Make globally visible.
	* dir.c (do_load_dir): Use path supplied as argument.  Call
	tree_store_start_check() after the directory is opened.
	(do_reload_dir): Likewise.

2003-10-23  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* dir.c (do_reload_dir): Fix memory leaks.

2003-10-23  Pavel Roskin  <proski@gnu.org>

	* win.c (check_movement_keys): Remove "additional" argument,
	it's always 1.

	* view.c: (put_editkey): Rename to ...
	(view_handle_editkey): ... this.  Move here some logic from ...
	(view_handle_key): ... here.

	* view.c: Eliminate struct block_ptr_t and enum ViewSide.
	Rename ascii mode to text mode.

	* view.c (WView): Remove unused fields localcopy and file_dirty.
	Make boolean fields 1 bit wide.

	* view.c (toggle_hexedit_mode): New function, split from ...
	(toggle_wrap_mode): ... this.