@@ -27,10 +27,8 @@ void reselect_vfs (void);
 void mkdir_cmd (void);
 void delete_cmd (void);
 void find_cmd (void);
-void tree_mode_cmd (void);
 void filter_cmd (void);
 void reread_cmd (void);
-void tree_view_cmd (void);
 void ext_cmd (void);
 void edit_mc_menu_cmd (void);
 void edit_user_menu_cmd (void);
